Sexto commit -- Gravação no banco de dados para inlcuir a localização de quando o usuário aperta o botão do pânico. Melhorias gerais no código

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx:20.2.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
 }
